# hex

./: .gitignore  .warp-commands.json  CLAUDE.md  DEPLOYMENT.md  README.md  WARP.md  api_design.md  files_to_stdout.sh  hex_tile_layouts.py  load-context.sh  main.py  pyproject.toml  requirements.txt  streamlit_app.py
.planning/: MILESTONES.md  PROJECT.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/milestones/: v1.0-MILESTONE-AUDIT.md  v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md
.planning/research/: 2026-04-06-frontend-contextual-help-quick.md  2026-04-06-hover-help-affordances-quick.md  (+5 more)
app/: generators.py  hex_tile_layouts_core.py  hexgrid.py
backend/: .dockerignore  .env.example  Dockerfile  README.md  cloudrun.env  pyproject.toml  pytest.ini  requirements.txt
backend/src/: main.py
backend/src/api/: images.py  overlay.py  patterns.py
backend/src/models/: api_models.py
backend/src/services/: image_service.py  overlay_service.py  pattern_service.py
backend/tests/contract/: conftest.py  test_cors_config.py  test_images_upload.py  test_overlay_calculate.py  test_patterns_download.py  test_patterns_generate.py
backend/tests/integration/: test_image_processing.py  test_mathematical_accuracy.py  test_pattern_generation.py
frontend/: .eslintrc.cjs  .prettierignore  .prettierrc  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  wrangler.toml
scripts/: README.md  complete-task.sh  task-status.sh
(+118 files in other folders)
